bat.bool1.parottrouble.ParotTrouble.scala.error
Erreur de compilation :
ParotTrouble:2: error: value or is not a member of Boolean
  if( (hour<4) or (hour >=20)){return true}
               ^